--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# .DS_Store Mac Files
+.DS_Store
+frontend/*.DS_Store
+backend/*.DS_Store
