--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
+    "multer": "^1.4.2",
     "nodemailer": "^6.6.0",
     "package-lock.json": "^1.0.0",
     "passport": "^0.4.1",
